--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,17 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "class model_1(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(model_1, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(2, 10, kernel_size=3)        \n",
-    "        self.conv2 = nn.Conv2d(10, 10, kernel_size=3)\n",
+    "        self.conv1 = nn.Conv2d(2, 16, kernel_size=3)        \n",
+    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=3)\n",
     "\n",
-    "        self.dense1 = nn.Linear(40, 10)\n",
+    "        self.dense1 = nn.Linear(288, 10)\n",
     "        self.dense2 = nn.Linear(10, 1)\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -78,18 +78,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class model_2(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(model_1, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(2, 10, kernel_size=3, padding=2)        \n",
+    "        self.conv2 = nn.Conv2d(10, 20, kernel_size=3, padding=2)\n",
+    "        self.conv3 = nn.Conv2d(20, 10, kernel_size=3, padding=2)\n",
+    "        self.conv4 = nn.Conv2d(10, 5, kernel_size=3, padding=2)\n",
+    "        self.conv5 = nn.Conv2d(5, 2, kernel_size=3, padding=2)\n",
+    "\n",
+    "        self.dense1 = nn.Linear(72, 10)\n",
+    "        self.dense2 = nn.Linear(10, 1)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.conv1(x))\n",
+    "        x = F.relu(self.conv2(x))\n",
+    "        x = F.relu(self.conv3(x))\n",
+    "        x = F.max_pool2d(self.conv4(x), kernel_size=2)\n",
+    "        x = F.max_pool2d(self.conv5(x), kernel_size=2)\n",
+    "        \n",
+    "        x = F.relu(self.dense1(torch.flatten(x, 1)))\n",
+    "        x = torch.flatten(torch.sigmoid(self.dense2(x))) # Last flatten to have [batch_size] instead of [batch_size, 1]\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "class model_weight_sharing(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(model_weight_sharing, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 10, kernel_size=3)        \n",
-    "        self.conv2 = nn.Conv2d(10, 10, kernel_size=3)\n",
+    "        self.conv1 = nn.Conv2d(1, 20, kernel_size=3)        \n",
+    "        self.conv2 = nn.Conv2d(20, 40, kernel_size=3)\n",
     "\n",
-    "        self.dense1 = nn.Linear(80, 10)\n",
-    "        self.dense2 = nn.Linear(10, 1)\n",
+    "        self.dense1 = nn.Linear(320, 40)\n",
+    "        self.dense2 = nn.Linear(40, 1)\n",
     "        \n",
     "    def forward(self, x):\n",
     "        d1 = F.max_pool2d(self.conv1(x[:, 0:1, ...]), kernel_size=2)\n",
@@ -102,13 +132,13 @@
     "\n",
     "        x = torch.cat((d1, d2), 1)\n",
     "        x = F.relu(self.dense1(torch.flatten(x, 1)))\n",
-    "        x = F.sigmoid(self.dense2(x))\n",
+    "        x = torch.flatten(F.sigmoid(self.dense2(x)))\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +164,7 @@
     "        self.digits2 = F.softmax((self.dense_digits2(x)), -1)\n",
     "        \n",
     "        x = F.relu(self.dense1(x))\n",
-    "        x = torch.sigmoid(self.dense2(x))\n",
+    "        x = torch.flatten(torch.sigmoid(self.dense2(x)))\n",
     "        return x"
    ]
   },
@@ -147,13 +177,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_model(model, train_input, train_target, epochs, optimizer, loss_function = nn.BCELoss(), batch_size=10):\n",
     "    # Inspired by exercise corrige \n",
     "    model.train()\n",
+    "    \n",
+    "    losses = []\n",
     "    \n",
     "    for e in range(epochs):\n",
     "        sum_loss = 0\n",
@@ -179,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,6 +220,7 @@
     "    # Inspired by exercise corrige \n",
     "    model.train()\n",
     "    \n",
+    "    losses = []\n",
     "    digit_loss = nn.CrossEntropyLoss()\n",
     "    \n",
     "    for e in range(epochs):\n",
@@ -225,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,6 +289,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def number_parameters(model):\n",
+    "    return sum(p.numel() for p in model.parameters())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -264,23 +307,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class model_1(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(model_1, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(2, 20, kernel_size=3)        \n",
+    "        self.conv2 = nn.Conv2d(20, 40, kernel_size=3)\n",
+    "        self.conv3 = nn.Conv2d(40, 40, kernel_size=3)\n",
+    "        self.conv4 = nn.Conv2d(40, 40, kernel_size=3)\n",
+    "\n",
+    "        self.dense1 = nn.Linear(360, 40)\n",
+    "        self.dense2 = nn.Linear(40, 1)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.conv1(x))\n",
+    "        x = F.relu(self.conv2(x))\n",
+    "        x = F.relu(self.conv3(x))\n",
+    "        x = F.max_pool2d(self.conv4(x), kernel_size=2)\n",
+    "        \n",
+    "        x = F.relu(self.dense1(torch.flatten(x, 1)))\n",
+    "        x = torch.flatten(F.sigmoid(self.dense2(x)))\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.numel(torch.Tensor([2, 3, 4, 5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "Trying to backward through the graph a second time, but the buffers have already been freed. Specify retain_graph=True when calling backward the first time.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-246-bcadb874578e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \"\"\"\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m     train_loss = train_auxiliary_model(model, \n\u001b[0m\u001b[0;32m     26\u001b[0m                         \u001b[0mx_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindices_shuffle\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m                         \u001b[0my_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindices_shuffle\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-245-6630d48c95bc>\u001b[0m in \u001b[0;36mtrain_auxiliary_model\u001b[1;34m(model, train_input, train_target, digit_target, epochs, optimizer, loss_function, batch_size)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m             \u001b[0mloss_digit1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m             \u001b[0mloss_digit2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m             \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[0;32m    196\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[1;33m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    197\u001b[0m         \"\"\"\n\u001b[1;32m--> 198\u001b[1;33m         \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    199\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    200\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[0;32m     96\u001b[0m         \u001b[0mretain_graph\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     97\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 98\u001b[1;33m     Variable._execution_engine.run_backward(\n\u001b[0m\u001b[0;32m     99\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    100\u001b[0m         allow_unreachable=True)  # allow_unreachable flag\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Trying to backward through the graph a second time, but the buffers have already been freed. Specify retain_graph=True when calling backward the first time."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting 10 training of 25 epochs, with model containing 50981 parameters.\n",
+      "Attempt 1 : loss 0.7726807594299316 - accuracy 81.0%\n",
+      "Attempt 2 : loss 0.8199782371520996 - accuracy 82.3%\n",
+      "Attempt 3 : loss 0.7827103734016418 - accuracy 81.9%\n",
+      "Attempt 4 : loss 0.770609438419342 - accuracy 82.6%\n",
+      "Attempt 5 : loss 0.8177830576896667 - accuracy 81.8%\n",
+      "Attempt 6 : loss 0.8201889991760254 - accuracy 81.0%\n",
+      "Attempt 7 : loss 0.7858431935310364 - accuracy 81.1%\n",
+      "Attempt 8 : loss 0.8350706100463867 - accuracy 80.5%\n",
+      "Attempt 9 : loss 0.7542928457260132 - accuracy 81.8%\n",
+      "Attempt 10 : loss 0.9408116340637207 - accuracy 81.3%\n",
+      "Experiment results :\n",
+      "Loss mean : 0.81 (0.003)\n",
+      "Accuracy mean : 81.53% (0.4)\n"
      ]
     }
    ],
@@ -291,42 +388,53 @@
     "losses = []\n",
     "train_losses = []\n",
     "accuracies = []\n",
+    "\n",
+    "auxiliary = False\n",
+    "\n",
+    "build_model = model_1\n",
+    "# build_model = model_2\n",
+    "# build_model = model_weight_sharing\n",
+    "\n",
+    "if auxiliary:\n",
+    "    build_model = model_auxiliary_loss\n",
+    "\n",
+    "print(\"Starting %i training of %i epochs, with model containing %i parameters.\" % \n",
+    "      (number_training, epochs, number_parameters(build_model())))\n",
+    "    \n",
     "for i_train in range(number_training):\n",
     "    \n",
-    "#     model = model_1()\n",
-    "#     model = model_weight_sharing()\n",
-    "\n",
-    "    auxiliary = True\n",
-    "    model = model_auxiliary_loss()\n",
-    "    \n",
-    "    optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "    model = build_model()\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=0.0005)\n",
     "\n",
     "    indices_shuffle = torch.randperm(N)\n",
     "    \n",
     "    if not auxiliary :\n",
     "        train_loss = train_model(model, \n",
-    "                            x_train[indices_shuffle],\n",
-    "                            y_train[indices_shuffle],  \n",
-    "                            epochs = epochs,\n",
-    "                           optimizer=optimizer)\n",
+    "                                x_train[indices_shuffle],\n",
+    "                                y_train[indices_shuffle],  \n",
+    "                                epochs = epochs,\n",
+    "                                optimizer=optimizer,\n",
+    "                                batch_size = 32)\n",
     "\n",
     "    else :\n",
     "        train_loss = train_auxiliary_model(model, \n",
-    "                            x_train[indices_shuffle],\n",
-    "                            y_train[indices_shuffle], \n",
-    "                            y_train_classes[indices_shuffle],\n",
-    "                            epochs = epochs,\n",
-    "                           optimizer=optimizer)\n",
+    "                                        x_train[indices_shuffle],\n",
+    "                                        y_train[indices_shuffle], \n",
+    "                                        y_train_classes[indices_shuffle],\n",
+    "                                        epochs = epochs,\n",
+    "                                        optimizer=optimizer,\n",
+    "                                        batch_size = 32)\n",
     "    \n",
     "    loss, accuracy = evaluate_model(model, x_test, y_test)\n",
-    "    print(\"Attempt\", i_train, \": loss\", loss, \"- accuracy\", accuracy)\n",
+    "    accuracy *= 100\n",
+    "    print(\"Attempt\", i_train + 1, \": loss\", loss, \"- accuracy %.1f%%\" % accuracy)\n",
     "    losses.append(loss)\n",
     "    train_losses.append(train_loss)\n",
     "    accuracies.append(accuracy)\n",
     "\n",
     "print(\"Experiment results :\")\n",
     "print(\"Loss mean : %.2f (%.3f)\" % (mean(losses), var(losses)))\n",
-    "print(\"Accuracy mean : %.2f (%.3f)\" % (mean(accuracies), var(accuracies)))"
+    "print(\"Accuracy mean : %.2f%% (%.1f)\" % (mean(accuracies), var(accuracies)))"
    ]
   }
  ],
